# CROssBAR_LLM

./: .dockerignore  .env.example  .gitignore  Dockerfile  ENVIRONMENT.md  README.md  gradio_interface.py  langchain_llm_qa_trial.py  langchain_llm_qa_trial_modified.py  neo4j_query_corrector.py  neo4j_query_executor.py  neo4j_query_executor_extractor.py  neo4j_schema_extractor.py  pyproject.toml  qa_templates.py  questions.csv  requirements.txt  startup.sh  utils.py
.github/workflows/: docker-publish.yml
crossbar_llm/: gradio_interface.py  langchain_llm_qa_trial.py  neo4j_query_corrector.py  neo4j_query_executor_extractor.py  qa_templates.py  streamlit_interface.py
crossbar_llm/backend/: config.py  dashboard_api.py  main.py  models_config.py
crossbar_llm/backend/tools/: __init__.py  conversation_store.py  langchain_llm_qa_trial.py  llm_callback_handler.py  neo4j_query_corrector.py  neo4j_query_executor_extractor.py  qa_templates.py  structured_logger.py  utils.py
crossbar_llm/frontend/: package-lock.json  package.json  pnpm-lock.yaml
crossbar_llm/frontend/public/: CellularComponent_names.txt  Drug_names.txt  EcNumber_names.txt  Gene_names.txt  OrganismTaxon_names.txt  Phenotype_names.txt  ProteinDomain_names.txt  file1.txt  index.html  manifest.json  protein_embedding.npy  site.webmanifest  small_molecule_embedding.npy
crossbar_llm/frontend/scripts/: build.js
crossbar_llm/frontend/src/: App.js  index.css  index.js  theme.js
crossbar_llm/frontend/src/components/: About.js  AutocompleteTextField.js  ChatLayout.js  ConversationHistory.js  DatabaseStats.js  Home.js  LatestQueries.js  NodeVisualization.js  QueryInput.js  ResultsDisplay.js  SampleQuestions.js  VectorSearch.js  VectorUpload.js
crossbar_llm/frontend/src/components/chat/: AutocompleteSuggestions.js  ChatHeader.js  ChatInput.js  ChatLayout.js  ChatMessages.js  LoadingIndicator.js  MessageBubble.js  WelcomeScreen.js  index.js
crossbar_llm/frontend/src/components/common/: CopyButton.js  ErrorDisplay.js  MarkdownRenderer.js  index.js
crossbar_llm/frontend/src/components/layout/: AppHeader.js  AppSidebar.js  index.js
crossbar_llm/frontend/src/components/sidebar/: DebugLogs.js  ExampleQueries.js  ModelSettings.js  QueryEditor.js  ResultsSection.js  RightPanel.js  SectionHeader.js  VectorSearchConfig.js  index.js
crossbar_llm/frontend/src/components/visualization/: EntityCard.js  EntityDetails.js  EntityList.js  NodeVisualization.js  entityUtils.js  index.js
crossbar_llm/frontend/src/constants/: exampleQueries.js  index.js  nodeTypeColors.js  supportedModels.js  vectorIndexMappings.js
crossbar_llm/frontend/src/dashboard/: DashboardApp.js  theme.js
crossbar_llm/frontend/src/dashboard/components/: Layout.js
crossbar_llm/frontend/src/dashboard/pages/: LogDetail.js  LogsExplorer.js  Overview.js  SessionDetail.js  SessionsExplorer.js
crossbar_llm/frontend/src/dashboard/services/: api.js
crossbar_llm/frontend/src/faq/: crossbar-llm-about.md
crossbar_llm/frontend/src/hooks/: index.js  useApiKeys.js  useAutocomplete.js  useCopyToClipboard.js  useModels.js  useQueryExecution.js  useSemanticSearch.js
crossbar_llm/frontend/src/scripts/: createSuggestions.py
crossbar_llm/frontend/src/services/: api.js
crossbar_llm/frontend/src/utils/: BiologicalDataFetcher.js  environment.js  helpers.js  loadSuggestions.js
crossbar_llm/log_dashboard/: package.json
crossbar_llm/log_dashboard/public/: index.html
crossbar_llm/log_dashboard/src/: App.js
crossbar_llm/log_dashboard/src/components/: Layout.js
crossbar_llm/log_dashboard/src/pages/: LiveLogs.js  LogDetail.js  Login.js  LogsExplorer.js  Overview.js
crossbar_llm/log_dashboard/src/services/: api.js
crossbar_llm/query_db/: BiologicalProcess_names.txt  Disease_names.txt  MolecularFunction_names.txt  SideEffect_names.txt
crossbar_llm/st_components/autocomplete/: __init__.py
crossbar_llm/st_components/autocomplete/frontend/: index.html  main.js  streamlit-component-lib.js  style.css
